# hana

./: .gdbinit  .gitignore  .gitmodules  .travis.yml  Cargo.toml  DOCUMENTATION.md  IMPLEMENTATION.md  Makefile  README.md  build.rs  init.hana  main.cpp  rustfmt.toml
examples/: fib-tail-call.hana  fib.hana  fizzbuzz.hana  hello-world.hana  json.hana  mandelbrot.hana  sieve.hana  todo.hana
experiment/: sample.txt
fuzzing/: filter  notes  run.sh
fuzzing/fuzzing/: Cargo.toml
fuzzing/fuzzing/src/: main.rs
hanayo/: array.cpp  float.cpp  hanayo.cpp  hanayo.h  integer.cpp  io.cpp  record.cpp  string.cpp
hanayo/interpreted/: arrays.hana  constants.hana  containers.hana  env.hana  init.hana  io.hana  json.hana  modules.hana  numbers.hana  panic.hana
hanayo/native/: array.cpp  env.cpp  ffi.cpp  float.cpp  hanayo.cpp  hanayo.h  integer.cpp  io.cpp  record.cpp  string.cpp  sys.cpp
src/: ast.cpp  ast.h  ast.rs  binding.cpp  binding.h  compiler.cpp  compiler.h  compiler.rs  environment.cpp  environment.h  error.h  gc.rs  lib.rs  main.rs  parser.h  parser.peg  scriptparser.cpp  scriptparser.h  types.h  value.cpp  value.h  vm.rs
src/decorator/: Cargo.toml
src/decorator/src/: lib.rs
src/hanayo/: array.rs  cffi.rs  cmd.rs  dir.rs  env.rs  eval.rs  file.rs  float.rs  int.rs  io.rs  math.rs  mod.rs  proc.rs  record.rs  string.rs  sys.rs  time.rs
src/hanayo/interpreted/: env.hana  json.hana  modules.hana
src/vm/: array.h  array_obj.c  array_obj.h  dict.c  dict.h  env.c  env.h  exception_frame.c  exception_frame.h  function.c  function.h  hmap.h  native_obj.c  native_obj.h  string.c  string_.h  value.c  value.h  vm.c  vm.h
src/vmbindings/: carray.rs  cfunction.rs  chmap.rs  cnativeval.rs  cstring.rs  env.rs  exframe.rs  foreignc.rs  function.rs  gc.rs  hmap.rs  interned_string_map.rs  internedstringmap.rs  mod.rs  nativeval.rs  record.rs  string.rs  stringheader.rs  value.rs  valuearray.rs  vm.rs  vmerror.rs
tests/: add_source.rs  arrays.hana  cffi.hana  comments.hana  copy.hana  dict.hana  double-ref.hana  eval.hana  fib.hana  files.hana  fizzbuzz.hana  functions.hana  gc.rs  hanayo.rs  import.hana  inline-function.hana  interpreter.rs  json.hana  lib.rs  loop-flow.hana  member-expr.hana  parser.rs  rc.hana  records.hana  reverse-bintree.hana  sieve.hana  simple-functions.hana  simple-vars.hana  simple.hana  string-perf.hana  string.hana  tail-call.hana  try-catch.hana  value_ext.rs  vm.rs
tests/interpreted/: array-function.hana  arrays.hana  cffi.hana  closure.hana  closures.hana  cmd.hana  error-test.hana  fib.hana  functions.hana  gc-1.hana  gc-perf.hana  gc.hana  hello-world.hana  index.hana  input.hana  interned.hana  iterator.hana  mandelbrot.hana  memexpr.hana  modules-help.hana  modules.hana  native-tailret.hana  records.hana  return.hana  reverse-bintree.hana  sdl.hana  simple-vars.hana  string-perf.hana  string.hana  test.hana  time.hana  try-catch.hana  unicode.hana  vm_call_exception.hana
vm/: Makefile  main.c  tests.c
vm/fastalloc/: fastalloc.c  fastalloc.h  main.c
vm/src/: array.h  array_obj.c  array_obj.h  bit_array.h  dict.c  dict.h  env.c  env.h  exception_frame.c  exception_frame.h  function.c  function.h  hmap.c  hmap.h  main.c  map.c  map.h  native_obj.c  native_obj.h  string.c  string_.h  value.c  value.h  vm.c  vm.h  xxhash.c  xxhash.h
vscode-extension/: language-configuration.json  package.json
vscode-extension/syntaxes/: hana.tmLanguage.json
