[package]
name = "haru"
version = "0.25.0"
description = "A fast, dynamically-typed general purpose scripting language"
authors = ["ffwff <mogamiriver@tuta.io>"]
documentation = "https://github.com/ffwff/hana/blob/haru/DOCUMENTATION.md"
homepage = "https://github.com/ffwff/hana"
repository = "https://github.com/ffwff/hana"
readme = "README.md"
license = "GPL-3.0"
edition = "2018"
build = "build.rs"

[badges]
travis-ci = { repository = "ffwff/hana", branch = "haru" }
codecov = { repository = "ffwff/hana", branch = "haru", service = "github" }

[[bin]]
bench = false
path = "src/main.rs"
name = "haru"

[dependencies]
haru-decorator = { version = "0.2.2", path = "./src/decorator/" }
libc = "0.2.0"
cfg-if = "0.1"
num-traits = "0.2"
num-derive = "0.2"
ansi_term = "0.11"
unicode-segmentation = "1.3.0"
rustyline = { version = "4.1.0", features = [] }
jemallocator = { version = "0.3.0", optional = true }
libffi-sys = { version = "0.7.0", optional = true }

[features]
default = []
jemalloc = ["jemallocator"]
cffi = ["libffi-sys"]

[build-dependencies]
peg = "0.5"
cc = { version = "1.0", features = ["parallel"] }

[profile.release]
lto = true
panic = 'abort'