[package]
name = "haru"
version = "0.28.0"
description = "A fast, dynamically-typed general purpose scripting language"
authors = ["ffwff <mogamiriver@tuta.io>"]
documentation = "https://github.com/ffwff/hana/blob/haru/DOCUMENTATION.md"
homepage = "https://github.com/ffwff/hana"
repository = "https://github.com/ffwff/hana"
readme = "README.md"
license = "GPL-3.0"
edition = "2018"
build = "build.rs"

[badges]
travis-ci = { repository = "ffwff/hana", branch = "haru" }
codecov = { repository = "ffwff/hana", branch = "haru", service = "github" }

[[bin]]
bench = false
path = "src/main.rs"
name = "haru"

[dependencies]
haru-decorator = { version = "0.2.3", path = "./src/decorator/" }
libc = "0.2.58"
cfg-if = "0.1.9"
num-traits = "0.2.8"
num-derive = "0.2.5"
ansi_term = "0.11.0"
unicode-segmentation = "1.3.0"
rustyline = { version = "4.1.0", features = [] }
jemallocator = { version = "0.3.0", optional = true }
libffi-sys = { version = "0.7.0", optional = true }

[features]
default = []
jemalloc = ["jemallocator"]
cffi = ["libffi-sys"]

[build-dependencies]
peg = "0.5.7"
cc = { version = "1.0.37", features = ["parallel"] }

[profile.release]
lto = true
panic = 'abort'
